log/build_2025-05-14_16-20-32/my_robot_controller/stdout_stderr.log
running egg_info
writing ../../build/my_robot_controller/my_robot_controller.egg-info/PKG-INFO
writing dependency_links to ../../build/my_robot_controller/my_robot_controller.egg-info/dependency_links.txt
writing entry points to ../../build/my_robot_controller/my_robot_controller.egg-info/entry_points.txt
writing requirements to ../../build/my_robot_controller/my_robot_controller.egg-info/requires.txt
writing top-level names to ../../build/my_robot_controller/my_robot_controller.egg-info/top_level.txt
reading manifest file '../../build/my_robot_controller/my_robot_controller.egg-info/SOURCES.txt'
writing manifest file '../../build/my_robot_controller/my_robot_controller.egg-info/SOURCES.txt'
running build
running build_py
copying my_robot_controller/turtle_controller_test_vii.py -> /home/susana/ros2_ws/build/my_robot_controller/build/lib/my_robot_controller
running install
running install_lib
copying /home/susana/ros2_ws/build/my_robot_controller/build/lib/my_robot_controller/turtle_controller_test_vii.py -> /home/susana/ros2_ws/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller
byte-compiling /home/susana/ros2_ws/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller/turtle_controller_test_vii.py to turtle_controller_test_vii.cpython-310.pyc
  File "/home/susana/ros2_ws/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller/turtle_controller_test_vii.py", line 122
    1   self.get_logger().info(f"Erro angular (error_theta): {error_theta:.3f} rad")            
        ^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/susana/ros2_ws/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/my_robot_controller/my_robot_controller.egg-info to /home/susana/ros2_ws/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller-0.0.0-py3.10.egg-info
running install_scripts
Installing draw_circle script to /home/susana/ros2_ws/install/my_robot_controller/lib/my_robot_controller
Installing pose_subscriber script to /home/susana/ros2_ws/install/my_robot_controller/lib/my_robot_controller
Installing test_node script to /home/susana/ros2_ws/install/my_robot_controller/lib/my_robot_controller
Installing turtle_controller script to /home/susana/ros2_ws/install/my_robot_controller/lib/my_robot_controller
Installing turtle_controller_test script to /home/susana/ros2_ws/install/my_robot_controller/lib/my_robot_controller
Installing turtle_controller_test_vii script to /home/susana/ros2_ws/install/my_robot_controller/lib/my_robot_controller
writing list of installed files to '/home/susana/ros2_ws/build/my_robot_controller/install.log'
